syntax = "proto3";

option go_package = ".;proto";

package cams.proto;

// The service used for authentication and provisioning
service Registrar {
  rpc Register(RegisterRequest) returns (RegisterReply) {}
}

// The service dedicated to the agents
service Controller {
  // Stream of commands from the server to the client
  rpc Control(stream ControlReply) returns (stream ControlRequest) {}
  // Stream of media frames from the client to the server
  rpc MediaUpload(stream MediaFrame) returns (MediaReply) {}
}

service Consumer {
  rpc Play(StreamId) returns (stream MediaFrame) {}
}

message Status {
  uint32 code = 1;
  string status = 2;
}

message RegisterRequest {
  StreamId id = 1;
}

message RegisterReply {
  Status status = 1;
}

message StreamId {
  string user = 1;
  string stream = 2;
}

enum Action {
  UNSET = 0;
  PLAY = 1;
  STOP = 2;
}

message ControlReply {
  StreamId id = 1;
  uint64 seq = 2;
  Status status = 3;
  Banner banner = 4;
}

message Banner {
  string user = 1;
}

message ControlRequest {
  uint64 seq = 2;
  Action action = 3;
}

message MediaFrame {
  bytes payload = 1;
  MediaBanner banner = 2;
}

message MediaReply {
  StreamId id = 1;
  Status status = 2;
}

message MediaBanner {
  string user = 1;
  string stream = 2;
  string token = 3;
}